# cara_analytics

./: .gitignore  __init__.py  analyze_face_features.py  check_enabled_apis.py  exploration.py  hmm_consequent_draw_processes_comparison_results.joblib  pyproject.toml  readme.md  requirements.txt
cara_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
competitors/list/: zts_list.json
data_ingestion/: .env.sample  CLAUDE.md  README.md  main.py  requirements.txt  test_ga4.py
data_ingestion/data_sources/: config.py
data_ingestion/data_sources/czech_cities/: schema.py
data_ingestion/data_sources/face_features/: schema.py
data_ingestion/data_sources/person_recommendation/: schema.py
data_ingestion/data_sources/population_density/: schema.py
data_ingestion/data_sources/zts_list/: schema.py
data_ingestion/db/: central.py  postgres.py
data_ingestion/loaders/: base_loader.py  czech_cities.py  face_features.py  person_recommendation.py  population_density.py  zts_list.py
data_ingestion/tests/: conftest.py  test_base_loader.py  test_czech_cities_loader_simple.py  test_face_features_loader_simple.py  test_integration_simple.py  test_person_recommendation_loader_simple.py  test_population_density_loader_simple.py  test_zts_list_loader_simple.py
data_ingestion/utils/: file_loader.py
experiment/: __init__.py  donor.py  draw.py
face_features_app/: Dockerfile  README.md  requirements.txt
face_features_app/app/: main.py
lib/: __init__.py  draw.py  geo.py  global_analysis_utils.py  hmm.py  lost_donors.py  preprocessing.py  zts.py
locations/: __init__.py  czech_cities.txt  readme.txt
locations/population_density/: population_map.py
