[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cara-analytics"
version = "0.1.0"
description = "Cara Analytics - Plasma donation data analysis"
authors = [{name = "Cara Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas", 
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "marimo",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "locations*"]
exclude = ["experiment*", "data_ingestion*", "face_features_app*", ".git*", ".venv*"]

[tool.setuptools.package-dir]
"" = "."